# simple-calculator

./: CHANEGLOG.md  readme.md  setup.cfg
src/: basicCalc.py  main.py
