[metadata]
name = Simple-Calculator
version = 1.1.0
author = Salman Thoriq Al Farisyi
author_email = salmanthoriq95@google.com
description = A simple operator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salmanthoriq95/simple-calculator
project_urls =
    Bug Tracker = https://github.com/salmanthoriq95/simple-calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows